<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nbuConstraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_nbu_example_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_nbu_example_text"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAmount" />

    <TextView
        android:id="@+id/textCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_nbu_example_text"
        app:layout_constraintBottom_toBottomOf="@id/textUnits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textAmount"
        />
</androidx.constraintlayout.widget.ConstraintLayout>