<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/buttonGraph"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_bar_chart_24" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativePB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pBText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privat_bank_tv"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/datePBText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_tv"
                android:textColor="@color/orange"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/datePickerIconPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@string/none"
                android:focusable="true"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/datePBText"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/relativePB">

            <TextView
                android:id="@+id/pbSellTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pb_sale_text"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pbPurchaseTV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pbCurrencyTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pb_currency_text"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pbPurchaseTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pbPurchaseTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pb_purchase_text"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pbSellTV"
                app:layout_constraintStart_toEndOf="@id/pbCurrencyTV"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/pbFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerConstraint" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeNBU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2">

            <TextView
                android:id="@+id/nbuText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nbu_text"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/dateNBUText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_tv"
                android:textColor="@color/orange"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/datePickerIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/none"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dateNBUText"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/nbuFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeNBU" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>